# rmua19_gazebo_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: base_params.yaml  referee_system_1v1.yaml
env-hooks/: ignition.dsv.in
ign/: gui.config
include/rmua19_ignition_simulator/: robot_base.hpp
launch/: simple_competition_1v1.launch.py  simple_competition_1v1_backup.launch.py  simple_competition_1v1_test.launch.py  simple_competition_1v1_test2.launch.py  standard_robot1_test.launch.py  standard_robot2_test.launch.py  standard_robot_a_test.launch.py  standard_robot_b_test.launch.py
models/industrial_camera/: model.config  model.sdf  model.sdf.xacro
models/rmua19_battlefield/: model.sdf  model.sdf.xacro
models/rmua19_competition_area/: model.config  model.sdf  model.sdf.xacro
models/rmua19_competition_wall/: model.config  model.sdf.xacro
models/rmua19_competition_wall/materials/scripts/: textures.material
models/rmua19_standard_robot1/: model.config  model.sdf  model.sdf.xacro
models/rmua19_standard_robot2/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_blue/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_blue1/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_blue2/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_red/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_red1/: model.config  model.sdf  model.sdf.xacro
models/rmua19_standard_robot2_red2/: model.sdf  model.sdf.xacro
models/rmua19_standard_robot_a/: model.config  rmua19_standard_robot_a.def.xacro
models/rmua19_standard_robot_b/: model.config  model.sdf  model.sdf.xmacro  rmua19_standard_robot_b.def.xmacro
models/rplidar_a2/: model.config  model.sdf  model.sdf.xmacro
models/rplidar_a2/meshes/: rplidar_a2.dae
nodes/: rmua19_robot_base2_node.cpp  rmua19_robot_base_node.cpp  robot_base_node.cpp
resource/models/industrial_camera/: model.sdf  model.sdf.xmacro
resource/models/industrial_camera/meshes/: industrial_camera.dae
resource/models/rmua19_battlefield/: model.config  model.sdf  model.sdf.xmacro
resource/models/rmua19_standard_robot_a/: model.sdf  model.sdf.xmacro  rmua19_standard_robot_a.def.xacro  rmua19_standard_robot_a.def.xmacro
resource/models/rmua19_standard_robot_b/: model.sdf  model.sdf.xmacro  rmua19_standard_robot_b.def.xmacro
resource/models/rplidar_a2/: model.sdf  model.sdf.xmacro
resource/worlds/: rmua19_world.sdf  rmua19_world_1v1.sdf.xmacro
resource/xmacro/: rmua19_standard_robot_a.sdf.xmacro  rmua19_standard_robot_b.sdf.xmacro
scripts/: killgazebo.sh  simple_competition_1v1_referee.py  test_control_chassis.py  test_control_gimbal.py  test_control_gimbal2.py  update_model.sh
scripts/control_web/: main.py  ros_handler.py
scripts/control_web/templates/: index.html
scripts/player_web/: app.py  app_gamepad.py  main.py  requirement.txt  requirements.txt  ros_handler.py  test.py
scripts/player_web/static/css/: ._bootstrap.min.css  main.css
scripts/player_web/static/js/: control.js  listener.js  variables.js  web_socket_utils.js
scripts/player_web/templates/: gamepad.html  index.html
scripts/player_web/web_copy/: app.py
scripts/player_web/web_copy/templates/: index.html
scripts/referee_system/: referee_system_client.py  simple_competition_1v1.py
scripts/referee_web/: main.py
scripts/referee_web/static/css/: ._uikit-rtl.min.css  control_panel.css
scripts/referee_web/static/js/: web_socket_utils.js
scripts/referee_web/templates/: index.html
src/: rmua19_robot_base_main.cpp  robot_base.cpp
worlds/: empty_world.sdf  rmua19_world.sdf  rmua19_world_1v1.sdf  rmua19_world_1v1.sdf.xmacro
