<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmua19_ignition_simulator</name>
    <version>1.0.0</version>
    <description>Ignition Simulator for RoboMaster University AI Challenge 2019</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rmoss_interfaces</build_depend>
    <build_depend>rmoss_ign_base</build_depend>
    <depend>ros_ign_gazebo</depend>
    <exec_depend>ros_ign_bridge</exec_depend>
    <exec_depend>rmoss_ign_resources</exec_depend>
    <exec_depend>rmoss_ign_plugins</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

