<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmua19_gazebo_simulator</name>
    <version>1.0.0</version>
    <description>Ignition Simulator for RoboMaster University AI Challenge 2019</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rmoss_interfaces</build_depend>
    <depend>ros_gz_sim</depend>
    <depend>ros_gz_bridge</depend>
    <depend>rmoss_gz_base</depend>
    <depend>rmoss_gz_cam</depend>
    <depend>rmoss_gz_resources</depend>
    <depend>rmoss_gz_plugins</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

